tests/paczka1/small_fuzzy/89190423.err
Error in line 3: A182 A380 67,4
Error in line 7: BaBc A182 49,6
Error in line 10: Ub7N5RQYEE A380 91,1
